# QtCrossRemoteDemo

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  mianwindow.ui
widgets/: ledtestwidget.cpp  ledtestwidget.h  ledtestwidget.ui
